# flow-process

./: .gitignore  README.md  install.sh  main.py  pyproject.toml  start.sh  status.sh  stop.sh
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: aviamentos.py  health.py  maquinarios.py  operadores.py  processos.py
backend/app/core/: config.py  database.py
backend/app/models/: aviamento.py  maquinario.py  operador.py  processo.py
backend/app/schemas/: aviamento.py  maquinario.py  operador.py  processo.py
docker/: docker-compose.yml
